more spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -341,12 +341,11 @@ i was mostly experimenting with figma design */
 
 .gridLayout .miniCard {
   background: var(--cardColor) 0% 0% no-repeat padding-box;
-  min-height: 240px;
   border-radius: 10px;
 }
 
 .gridLayout .miniCard p {
-  padding: 8px 24px 8px 24px;
+  padding: 0 24px 14px 24px;
 }
 
 /* jank ass wedge code */
